# grapheme

./: Cargo.toml  README.md
grapheme/: Cargo.toml  README.md
grapheme/benches/: input.txt  input_ascii.txt  normalization.rs
grapheme/src/: category.rs  grapheme.rs  grapheme_owned.rs  graphemes.rs  lib.rs  modification.rs  normalization.rs
grapheme_macro/: Cargo.toml  README.md
grapheme_macro/src/: lib.rs
