[package]
name = "grapheme"
version = "1.1.1"
authors = ["Hedgehogo"]
description = "Abstractions for working with extended Unicode grapheme clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hedgehogo/grapheme"
readme = "README.md"
keywords = ["text", "unicode", "grapheme", "graphemes"]
categories = ["text-processing", "data-structures"]
edition = "2024"

[dependencies]
smallvec = "1"
grapheme_macro = "1"
ucd = "0.1"
unicode-segmentation = { workspace = true }
unicode-normalization = { workspace = true }
