[package]
name = "grapheme"
version = "1.2.1"
authors = ["Hedgehogo"]
description = "Abstractions for working with extended Unicode grapheme clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hedgehogo/grapheme"
readme = "README.md"
keywords = ["text", "unicode", "grapheme", "graphemes"]
categories = ["text-processing", "data-structures"]
edition = "2024"

[dependencies]
smallvec = "1"
grapheme_macro = "2"
icu_properties = "2"
unicode-segmentation = { workspace = true }
unicode-normalization = { workspace = true }
