[package]
name = "grapheme_macro"
version = "3.0.0"
authors = ["Hedgehogo"]
description = "Macros for the `grapheme` crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hedgehogo/grapheme"
readme = "README.md"
keywords = ["text", "unicode", "grapheme", "graphemes"]
categories = ["text-processing", "data-structures"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
unicode-segmentation = { workspace = true }
unicode-normalization = { workspace = true }
proc-macro2 = "1"
